[tool.poetry]
name = "unified-graphics"
version = "0.1.0"
description = ""
authors = [
    "Ian McGinnis <ian.mcginnis@noaa.gov>",
    "W. Evan Sheehan <evan.sheehan@noaa.gov>"
]

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^3.0.3"
netCDF4 = "^1.7.1"
xarray = "^2024.6.0"
h5netcdf = "^1.3.0"
scipy = "^1.14.0"
# Use permissive versions to resolve dependency hell with boto3 & aiobotocore
aiobotocore = {version = "*", extras = ["boto3"]}
fsspec = "*"
s3fs = "*"
zarr = "^2.18.2"
flask-sqlalchemy = "^3.1.1"
psycopg = {version = "^3.2.1", extras = ["binary", "pool"]}
alembic = "^1.13.2"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
mypy = "^1.10"
black = "^24.3.0"
flake8 = "^7.1.0"
coverage = "^7.5.4"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
pandas-stubs = "^2.2.2.240603"
moto = {extras = ["server"], version = "^5.0.10"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
s3_bulk_rename = "utils.s3.s3_bulk_renaming:main"
