[tool.poetry]
name = "unified-graphics"
version = "0.1.0"
description = ""
authors = [
    "Ian McGinnis <ian.mcginnis@noaa.gov>",
    "W. Evan Sheehan <evan.sheehan@noaa.gov>"
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.1.2"
netCDF4 = "^1.6.1"
xarray = "2022.10.0" # using 2022.11.0 caused numpy warnings
fsspec = "^2022.10.0"
s3fs = "^2022.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
coverage = "^6.4.4"
moto = {version = "^4.0.8", extras = ["server"]}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
