[tool.poetry]
name = "unified-graphics"
version = "0.1.0"
description = ""
authors = [
    "Ian McGinnis <ian.mcginnis@noaa.gov>",
    "W. Evan Sheehan <evan.sheehan@noaa.gov>"
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.1.2"
netCDF4 = "^1.6.1"
xarray = "^2023.02.0"
fsspec = "^2022.10.0"
s3fs = "^2022.10.0"
zarr = "^2.14.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
coverage = "^7.2.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
