[tool.poetry]
name = "ugdata"
version = "0.1.0"
description = "Data processing pipeline for Unified Graphics"
authors = ["W. Evan Sheehan <evan.sheehan@noaa.gov>"]

[tool.poetry.dependencies]
python = "~3.9"
xarray = "2022.10.0"
netCDF4 = "1.6.1"
zarr = "^2.13.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
coverage = "^7.0.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
