[tool.poetry]
name = "ugdata"
version = "0.1.0"
description = "Data processing pipeline for Unified Graphics"
authors = ["W. Evan Sheehan <evan.sheehan@noaa.gov>"]

[tool.poetry.dependencies]
python = "~3.9"
xarray = "2022.10.0"  # Xarray > v2022.11 gives warnings about numpy array sizes changing. https://github.com/pydata/xarray/issues/7259
netCDF4 = "1.6.1"
zarr = "^2.14.1"
boto3 = "^1.26.74"
h5netcdf = "^1.1.0"
scipy = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
coverage = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
