[tool.poetry]
name = "ugdata"
version = "0.1.0"
description = "Data processing pipeline for Unified Graphics"
authors = ["W. Evan Sheehan <evan.sheehan@noaa.gov>"]

[tool.poetry.dependencies]
python = "~3.9"
xarray = "2023.3.0"
netCDF4 = "^1.6.1"
zarr = "^2.14.1"
h5netcdf = "^1.1.0"
scipy = "^1.10.0"
# Use permissive versions to resolve dependency hell with boto3 & aiobotocore
aiobotocore = {version = "*", extras = ["boto3"]}
s3fs = "*"
fsspec = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
coverage = "^7.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
